# freetype-direct-gl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/font/: CMakeLists.txt  cu2qu.cxx  cu2qu.h  font.h  font_impl.cxx  font_impl.h  font_manager.cxx  font_manager.h  glyph.h  glyph_compiler.cxx  glyph_compiler.h  glyph_impl.cxx  glyph_impl.h
src/render/: CMakeLists.txt  render.cxx  render.h
src/text/: CMakeLists.txt  color.h  markup.h  pen.h  text_buffer.cxx  text_buffer.h
src/utils/: CMakeLists.txt  char_width.cxx  char_width.h  err_msg.cxx  err_msg.h  memory_buffer.cxx  memory_buffer.h  opengl.h  program.cxx  program.h  program_render.cxx  program_render_background.cxx  program_text_buffer.cxx  shader.cxx  shader.h
src/viewport/: CMakeLists.txt  viewport.cxx  viewport.h
test/: CMakeLists.txt  glfw_hack.h  glfw_hack.m  markup.cxx  opengl.h  screenshot-util.c  screenshot-util.h
test/font/: CMakeLists.txt  example5.cpp  test_font_manager.cxx
